--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Flow Free game with AI algorithm to solve and generate maps with multiplayer version.",
   "main": "start.js",
-  "type": "module",
   "scripts": {
-    "start": "node ./ZApp/App.js",
+    "start": "node ./server/Server.js",
+    "dev": "nodemon ./server/Server.js",
     "test": "jest"
   },
   "repository": {
@@ -23,6 +23,8 @@
     "jest": "^27.3.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "socket.io": "^4.4.0"
   }
 }
