BlockedPass, tests, general cleanup, fixed bugs
Another requirement for node to be valid has been created, BlockedPass checks by extending pipe in all directions (currently two tiles), if extended pipe blocks more points than the witdth of the passage. If it is true than original move is not valid. Tests for blocked pass has been written. General clean up of the messy code - removed many duplicated functions, cleaned debug toolsand better commented the code (ComponentLabeling has not yet been cleaned and some functions still will be rewrited for better performance). Fixed bugs with function detecting missed tiles and stranded sectors.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node ./server/Server.js",
     "dev": "nodemon ./server/Server.js",
-    "test": "jest"
+    "test": "jest ./tests",
+    "testOne": "jest ./tests/missedTile.test.js"
+
   },
   "repository": {
     "type": "git",
