Forced moves fix
Forced move has been a bit upgraded but it will be still tested (in case it still would have issues)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./server/Server.js",
     "dev": "nodemon ./server/Server.js",
     "test": "jest ./tests",
-    "testOne": "jest ./tests/missedTile.test.js"
+    "testOne": "jest ./tests/ForcedMove.test.js"
 
   },
   "repository": {
