Server and client
Created rooms on server side that will be used to play games. Two clients can connect to the same server and see the same map (cannot play yet). Users also cannot connect to not existing rooms and full rooms. Made simple UI for the start menu and the lobby settings (probably gonna be changed)

--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "node ./server/Server.js",
     "dev": "nodemon ./server/Server.js",
-    "test": "jest ./tests",
-    "testCanTouch": "jest ./tests/SolveAll_CAN.test.js",
-    "testCantTouch": "jest ./tests/SolveAll.test.js"
-
+    "test": "jest ./tests"
   },
   "repository": {
     "type": "git",
